--- a/src/components/ui/burger-constructor/burger-constructor.module.css
+++ b/src/components/ui/burger-constructor/burger-constructor.module.css
@@ -10,9 +10,14 @@
   min-height: 100px;
 
   overflow-y: scroll;
+  scrollbar-width: thin;
   list-style-type: none;
   margin: 0;
   padding: 0;
+}
+
+.elementsNoChildren {
+  overflow: hidden;
 }
 
 .total {
